--- a/scss/components/_animation-decor.scss
+++ b/scss/components/_animation-decor.scss
@@ -37,6 +37,12 @@
         right: 0;
         top: 30px;
         animation-delay: 0.8s;
+
+        visibility: hidden;
+
+        @media screen and (min-width: $bp-desktop) {
+                visibility: visible;
+                }
     }
 
     &__item.small-star {
@@ -44,12 +50,77 @@
         right: 30px;
         top: 280px;
         animation-delay: 0.2s;
+
+        visibility: hidden;
+        
+            @media screen and (min-width: $bp-desktop) {
+                visibility: visible;
+            }
     }
 
     &__item.large-star {
         fill: var(--color-primary-dark);
-        right: 300px;
-        top: 350px;
+        right: 0px;
+            top: 300px;
         animation-delay: 0.5s;
+
+
+        
+
+        @media screen and (min-width: $bp-tablet) {
+                right: 300px;
+                top: 350px;
+            }
+    }
+}
+
+.about-us {
+    color: var(--color-primary-dark);
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.7;
+
+    &__container {
+        display: flex;
+        gap: 28px;
+    }
+
+    &__text {
+        flex-basis: calc(60% - 14px);
+        padding-top: 40px;
+
+        h2 {
+            margin-bottom: 40px;
+        }
+
+        p {
+            margin-bottom: 40px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+    &__image {
+        display: none;
+        flex-direction: column;
+        gap: 40px;
+        flex-basis: calc(40% - 14px);
+        position: relative;
+        z-index: 2;
+
+        img {
+            border-radius: 50%;
+
+            &:first-child {
+                align-self: flex-start;
+            }
+
+            &:last-child {
+                align-self: flex-end;
+            }
+        }
     }
 }
