--- a/scss/components/_pagination.scss
+++ b/scss/components/_pagination.scss
@@ -3,7 +3,10 @@
     align-items: center;
     justify-content: center;
     gap: 24px;
-    margin-top: 32px;
+    margin-top: 16px;
+    @media screen and (min-width: $bp-tablet) {
+            margin-top: 32px;
+        }
 
     &__button {
         width: 12px;
