--- a/scss/layouts/_advantages-section.scss
+++ b/scss/layouts/_advantages-section.scss
@@ -1,71 +1,92 @@
 .about-advantages {
-    position: relative;
-    z-index: 1;
-    color: var(--color-original-black);
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.3;
+  position: relative;
+  z-index: 1;
+  color: var(--color-original-black);
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+  padding-top: 104px;
+
+  @media screen and (min-width: $bp-desktop) {
     padding-top: 176px;
+  }
 
-    &::before {
-        content: '';
-        position: absolute;
-        top: -110px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100vw;
-        height: 650px;
-        background-image: url('./images/background.png');
-        background-repeat: no-repeat;
-        background-size: 100vw auto;
-        background-position: center top;
-        background-blend-mode: normal;
-        z-index: -1;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100vw;
+    height: 650px;
+    background-image: image-set(
+      url("../images/background.png") 1x,
+      url("../images/background@2x.png") 2x
+    );
+    background-repeat: no-repeat;
+    background-size: 100vw auto;
+    background-position: center top;
+    background-blend-mode: normal;
+    z-index: -1;
+
+    @media screen and (min-width: $bp-tablet) {
+      top: -60px;
+    }
+  }
+
+  &__title {
+    margin-bottom: 24px;
+
+    span {
+      display: block;
     }
 
-    @media screen and (-webkit-min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx)
-    {
-        &::before {
-            background-image: url('../images/background@2x.png')
-        }
-    } 
+    @media screen and (min-width: $bp-tablet) {
+      margin-bottom: 48px;
 
-    &__title {
-        margin-bottom: 48px;
+      span {
+        display: inline;
+      }
+    }
+  }
+
+  &__block {
+    display: flex;
+    gap: 16px;
+    padding-bottom: 40px;
+    flex-direction: column;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      gap: 58px;
+      padding-bottom: 96px;
+    }
+  }
+
+  &__item {
+    flex-basis: calc((100% - 2 * 58px) / 3);
+
+    img {
+      padding-bottom: 17px;
     }
 
-    &__block {
-        display: flex;
-        gap: 58px;
-        padding-bottom: 96px;
+    p {
+      margin: 0;
     }
+  }
 
-    &__item {
-        flex-basis: calc((100% - 2 * 58px) / 3);
+  &__icon {
+    fill: var(--color-primary-brand);
+  }
 
-        img {
-            padding-bottom: 17px;
-        }
-
-        p {
-            margin: 0;
-        }
-    }
-
-    &__icon {
-        fill: var(--color-primary-brand);
-    }
-
-    &__box {
-        border-radius: 32px;
-        box-shadow: 0px 4px 4px 0px rgba(168, 198, 245, 0.38);
-        background: var(--color-primary-light);
-        text-align: center;
-        justify-content: center;
-        padding: 24px;
-        flex-basis: calc((100% - 2 * 58px) / 3);
-    }
+  &__box {
+    border-radius: 32px;
+    box-shadow: 0px 4px 4px 0px rgba(168, 198, 245, 0.38);
+    background: var(--color-primary-light);
+    text-align: center;
+    justify-content: center;
+    padding: 24px;
+    flex-basis: calc((100% - 2 * 58px) / 3);
+  }
 }
