--- a/scss/layouts/_contact-section.scss
+++ b/scss/layouts/_contact-section.scss
@@ -1,56 +1,83 @@
 .contact-section {
-    &__container {
-        display: flex;
-        gap: 32px;
-        justify-content: center;
-        margin-bottom: 96px;
+  &__container {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    margin-bottom: 0;
+    flex-direction: column-reverse;
+
+    @media screen and (min-width: $bp-desktop) {
+      flex-direction: row;
+      gap: 32px;
+      justify-content: center;
+      margin-bottom: 96px;
     }
+  }
 
-    &__map {
-        flex-shrink: 0;
+  &__map {
+    flex-shrink: 0;
+    margin: 0 -24px;
+    height: 320px;
+    border: none;
+    border-radius: 0;
+
+    @media screen and (min-width: $bp-desktop) {
+      border-radius: 32px;
+      margin: 0;
+      width: 605px;
+      height: 481px;
     }
+  }
 
+  &__box {
+    flex-shrink: 0;
+    width: auto;
+    height: auto;
+    background-color: var(--color-primary-dark);
+    background-image: image-set(
+      url("../images/footer.png") 1x,
+      url("../images/footer@2x.png") 2x
+    );
+    border-radius: 32px;
+    padding: 48px 56px;
 
-    &__box {
-        flex-shrink: 0;
-        width: 423px;
-        height: auto;
-        background-image: url(../images/footer.jpg);
-        border-radius: 32px;
-        padding: 48px 56px;
+    @media screen and (min-width: $bp-desktop) {
+      width: 423px;
+      height: auto;
     }
+  }
 
-    &__button {
-        display: block;
-        margin: 0 auto;
+  &__button {
+    display: block;
+    margin: 0 auto;
 
-        &:hover {
-            color: var(--color-primary-light);
-        }
+    &:hover {
+      color: var(--color-primary-light);
     }
+  }
 
-    &__terms {
-        margin-top: 8px;
-        margin-bottom: 0;
-        text-align: center;
-        font-size: 12px;
-        line-height: 1.5;
-        font-weight: 400;
-        color: var(--color-secondary-light);
-    }
+  &__terms {
+    margin-top: 8px;
+    margin-bottom: 0;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.5;
+    font-weight: 400;
+    color: var(--color-secondary-light);
+  }
 
-    &__title {
-        margin-bottom: 32px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 22px;
-        font-weight: 600;
-        letter-spacing: 1.1;
-        text-align: center;
-        color: var(--color-primary-light)
-    }
+  &__title {
+    margin-bottom: 32px;
+    font-family: "Roboto", sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+    letter-spacing: 1.1;
+    text-align: center;
+    color: var(--color-primary-light);
+  }
 
-    &__terms-link {
-        color: var(--color-secondary-light);
-        text-decoration: underline;
-    }
+  &__terms-link {
+    color: var(--color-secondary-light);
+    text-decoration: underline;
+  }
 }
