--- a/scss/layouts/_footer-section.scss
+++ b/scss/layouts/_footer-section.scss
@@ -1,120 +1,169 @@
 .footer {
-    position: relative;
-    background-image: url('../images/footer.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+  position: relative;
+  background-color: var(--color-primary-dark);
+  background-image: image-set(
+    url("../images/footer.png") 1x,
+    url("../images/footer@2x.png") 2x
+  );
 
-    @media screen and (min-device-pixel-ratio: 2) {
-            background-image: url('./images/footer@2x.jpg');
-        }
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 247px;
+    height: 152px;
+    background: right bottom / contain no-repeat url("../images/beauty.png");
+    z-index: 1;
+    pointer-events: none;
+    display: none;
 
+    @media screen and (min-width: $bp-desktop) {
+      display: block;
+    }
+  }
 
-    &::after {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 247px;
-        height: 152px;
-        background-image: url('./images/beauty-product.png');
-        background-repeat: no-repeat;
-        background-size: contain;
-        z-index: 0;
-        pointer-events: none;
+  &__contact-us-container {
+    display: block;
+    justify-content: center;
+    padding-top: 32px;
+    padding-bottom: 66px;
+    gap: 186px;
+    text-align: center;
 
-        @media screen and (min-device-pixel-ratio: 2) {
-                background-image: url('./images/beauty-product@2x.png');
-            }
+    @media screen and (min-width: $bp-desktop) {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 58px;
+      padding-bottom: 56px;
+    }
+  }
+
+  &__navigation {
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
 
-    &__contact-us-container {
-        display: flex;
-        justify-content: space-between;
-        padding-top: 58px;
-        padding-bottom: 56px;
-        gap: 186px;
-    }
+    a {
+      font-family: "Roboto", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 1.1;
+      font-style: normal;
+      color: var(--color-primary-light);
 
-    &__navigation {
-        ul {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-        }
-
-        a {
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 1.1;
-            font-style: normal;
-            color: var(--color-primary-light);
-
-            &:hover {
-                color: var(--color-primary-brand);
-            }
-        }
-    }
-
-    &__adress {
-        a {
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 1.1;
-            font-style: normal;
-            color: var(--color-primary-light);
-            &:hover {
-                color: var(--color-primary-brand);
-            }
-        }
-    }
-
-    &__adress-list {
-        ul {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-        }
-    }
-
-    &__contacts {
-        display: flex;
-        margin-top: 16px;
-        gap: 24px;
-    }
-
-    &__logo-icon {
-        fill: var(--color-primary-light);
-    }
-
-    &__address-link {
-        font-family: 'Roboto', sans-serif;
+      @media screen and (min-width: $bp-desktop) {
         font-size: 16px;
-        font-weight: 400;
-        line-height: 1.1;
-        font-style: normal;
-        color: var(--color-primary-light);
+      }
 
-        &:hover {
-            color: var(--color-primary-brand);
-        }
+      &:hover {
+        color: var(--color-primary-brand);
+      }
+    }
+  }
+
+  &__adress {
+    a {
+      font-family: "Roboto", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.1;
+      font-style: normal;
+      color: var(--color-primary-light);
+
+      &:hover {
+        color: var(--color-primary-brand);
+      }
+    }
+  }
+
+  &__adress-list {
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+
+      @media screen and (min-width: $bp-desktop) {
+        gap: 16px;
+      }
+    }
+  }
+
+  &__contacts {
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 16px;
+    gap: 24px;
+    justify-content: center;
+    @media screen and (min-width: $bp-desktop) {
+      justify-content: flex-start;
+      margin-bottom: 0;
+      margin-top: 16px;
+    }
+  }
+
+  &__logo-icon {
+    fill: var(--color-primary-light);
+    width: 32px;
+    height: 32px;
+
+    @media screen and (min-width: $bp-desktop) {
+      width: 42px;
+      height: 42px;
+    }
+  }
+
+  &__address-link {
+    display: none;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.1;
+    font-style: normal;
+    color: var(--color-primary-light);
+
+    @media screen and (min-width: $bp-desktop) {
+      display: block;
     }
 
-    &__privacy-policy {
-        p {
-            margin-top: 16px;
-            margin-bottom: 0;
-        }
+    &:hover {
+      color: var(--color-primary-brand);
     }
+  }
 
-    &__copyright {
-        color: var(--color-secondary-light);
-        font-family: 'Roboto', sans-serif;
-        font-size: 13px;
-        font-weight: 400;
-        line-height: 1.1;
-        font-style: normal;
+  &__privacy-policy {
+    p {
+      margin-top: 16px;
+      margin-bottom: 0;
     }
+  }
+
+  &__copyright {
+    color: var(--color-secondary-light);
+    font-family: "Roboto", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.1;
+    font-style: normal;
+
+    @media screen and (min-width: $bp-desktop) {
+      font-size: 13px;
+    }
+  }
+
+  &__logo {
+    padding-bottom: 42px;
+    @media screen and (min-width: $bp-desktop) {
+      padding-bottom: 0;
+    }
+  }
+
+  &__privacy-text {
+    font-size: 14px;
+    @media screen and (min-width: $bp-desktop) {
+      font-size: 16px;
+    }
+  }
 }
