--- a/scss/layouts/_services-section.scss
+++ b/scss/layouts/_services-section.scss
@@ -6,16 +6,24 @@
     line-height: 1.1;
 
     &__container {
-        padding: 0 0 96px;
+        padding: 0 0 40px;
         display: flex;
         flex-direction: column;
         position: relative;
         overflow: hidden;
+
+        @media screen and (min-width: $bp-tablet) {
+                padding: 0 0 96px;
+            }
     }
 
     &__carouselle {
         overflow: hidden;
-        margin: 0 64px;
+        margin: 0;
+
+    @media screen and (min-width: $bp-tablet) {
+            margin: 0 64px;
+        }
     }
 
     &__item {
@@ -33,9 +41,12 @@
 
     &__box {
         flex-grow: 1;
-        display: flex;
+        display: flex;;
         flex-direction: column;
         position: relative;
+        
+
+        
 
         &::after {
             content: '';
@@ -44,6 +55,7 @@
             background: linear-gradient(180deg, rgba(1, 28, 68, 0) 48.529%, rgba(1, 28, 68, 0.73) 84.641%, rgb(1, 28, 68) 101.43%);
             z-index: 0;
             border-radius: 4px 120px 4px 120px;
+            
         }
 
         img {
@@ -73,4 +85,5 @@
         display: flex;
 
     }
+
 }
