--- a/scss/layouts/_advantages-section.scss
+++ b/scss/layouts/_advantages-section.scss
@@ -15,23 +15,32 @@
   &::before {
     content: "";
     position: absolute;
-    top: 30px;
+    top: -50px;
     left: 50%;
     transform: translateX(-50%);
-    width: 100vw;
-    height: 650px;
+    width: 120vw; // базовое значение для планшетов
+    height: 1440px;
     background-image: image-set(
       url("../images/background.png") 1x,
       url("../images/background@2x.png") 2x
     );
     background-repeat: no-repeat;
-    background-size: 100vw auto;
+    background-size: 100% 1440px;
     background-position: center top;
     background-blend-mode: normal;
     z-index: -1;
 
+    @media screen and (min-width: $bp-mobile) {
+      width: 200vw;
+    }
+
     @media screen and (min-width: $bp-tablet) {
-      top: -60px;
+      width: 120vw;
+    }
+
+    @media screen and (min-width: $bp-desktop) {
+      width: 100vw;
+      top: 30px;
     }
   }
 
@@ -44,10 +53,6 @@
 
     @media screen and (min-width: $bp-tablet) {
       margin-bottom: 48px;
-
-      span {
-        display: inline;
-      }
     }
   }
 
