--- a/scss/layouts/_footer-section.scss
+++ b/scss/layouts/_footer-section.scss
@@ -36,6 +36,7 @@
       justify-content: space-between;
       padding-top: 58px;
       padding-bottom: 56px;
+      text-align: left;
     }
   }
 
