--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -1,23 +1,23 @@
 .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--color-primary-light);
-transform: translateX(100%);
-transition: transform 0.3s;
-visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-primary-light);
+  transform: translateX(100%);
+  transition: transform 0.3s;
+  visibility: hidden;
+  z-index: 99;
 
-&.is-open {
+  &.is-open {
     transform: translateX(0);
     visibility: visible;
-}
+  }
 
-&__btn-close {
+  &__btn-close {
     position: absolute;
     top: 16px;
     right: 20px;
-}
-
+  }
 }
