--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -1,99 +1,112 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(1, 28, 68, 0.4); // затемнення
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    opacity: 1;
-    visibility: visible;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-  
-    &.is-hidden {
-      opacity: 0;
-      visibility: hidden;
-      pointer-events: none;
-    }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(1, 28, 68, 0.4); // затемнення
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
   }
-  
-  .modal {
-    background-color: var(--color-primary-dark);
+}
+
+.modal {
+  background-color: var(--color-primary-dark);
   background-image: image-set(
     url("../images/footer.png") 1x,
     url("../images/footer@2x.png") 2x
   );
-    border-radius: 48px;
+  border-radius: 48px;
+  padding: 42px 80px;
+  max-width: 723px;
+  width: 90%;
+  z-index: 1001;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  position: relative;
+
+  @media screen and (min-width: $bp-tablet) {
     padding: 42px 144px;
-    max-width: 723px;
-    width: 100%;
-    z-index: 1001;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-    position: relative;
-  
-    &__btn-close {
-      all: unset;
-      position: absolute;
-      top: 42px;
-      right: 42px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  
-    &__title {
-      color: var(--color-primary-light);
-      text-align: center;
-      font-family: 'Play', sans-serif;
+  }
+
+  &__btn-close {
+    all: unset;
+    position: absolute;
+    top: 42px;
+    right: 42px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__title {
+    color: var(--color-primary-light);
+    text-align: center;
+    font-family: "Play", sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 1.1;
+    margin-bottom: 42px;
+
+    @media screen and (min-width: $bp-mobile) {
       font-size: 64px;
-      font-weight: 700;
-      line-height: 1.1;
-      margin-bottom: 42px;
     }
-  
-    &__text {
-      font-family: 'Roboto', sans-serif;
+  }
+
+  &__text {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.1;
+    text-align: center;
+    color: var(--color-primary-light);
+    margin-bottom: 32px;
+
+    @media screen and (min-width: $bp-tablet) {
       font-size: 22px;
-      font-weight: 600;
-      line-height: 1.1;
-      text-align: center;
+    }
+  }
+
+  &__form-fieald {
+    padding-bottom: 24px;
+  }
+
+  &__button {
+    display: block;
+    margin: 0 auto;
+
+    &:hover {
       color: var(--color-primary-light);
-      margin-bottom: 32px;
     }
-  
-    &__form-fieald {
-      padding-bottom: 24px;
-    }
-  
-    &__button {
-      display: block;
-      margin: 0 auto;
-  
-      &:hover {
-        color: var(--color-primary-light);
-      }
-    }
+  }
 
   &__form-terms {
     text-align: center;
-      font-family: 'Roboto', sans-serif;
-      font-size: 12px;
-      font-weight: 400;
-      line-height: 1.5;
-      font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 1.5;
+    font-style: normal;
     color: var(--color-secondary-light);
     margin-top: 8px;
-        margin-bottom: 0;
-      
-    }
-     &__terms-link {
-        color: var(--color-secondary-light);
-        text-decoration: underline;
-     }
-  }
+    margin-bottom: 0;
 
- 
+    @media screen and (min-width: $bp-tablet) {
+      font-size: 12px;
+    }
+  }
+  &__terms-link {
+    color: var(--color-secondary-light);
+    text-decoration: underline;
+  }
+}
