--- a/scss/layouts/_advantages-section.scss
+++ b/scss/layouts/_advantages-section.scss
@@ -18,14 +18,14 @@
     top: -50px;
     left: 50%;
     transform: translateX(-50%);
-    width: 120vw; // базовое значение для планшетов
+    width: 120vw;
     height: 1440px;
     background-image: image-set(
       url("../images/background.png") 1x,
       url("../images/background@2x.png") 2x
     );
     background-repeat: no-repeat;
-    background-size: 100% 1440px;
+    background-size: cover;
     background-position: center top;
     background-blend-mode: normal;
     z-index: -1;
@@ -41,6 +41,7 @@
     @media screen and (min-width: $bp-desktop) {
       width: 100vw;
       top: 30px;
+      background-size: 100% 1440px;
     }
   }
 
