--- a/scss/layouts/_contact-section.scss
+++ b/scss/layouts/_contact-section.scss
@@ -39,11 +39,12 @@
       url("../images/footer@2x.png") 2x
     );
     border-radius: 32px;
-    padding: 48px 56px;
+    padding: 48px 24px;
 
     @media screen and (min-width: $bp-desktop) {
       width: 423px;
       height: auto;
+      padding: 48px 56px;
     }
   }
 
@@ -71,7 +72,7 @@
     font-family: "Roboto", sans-serif;
     font-size: 22px;
     font-weight: 600;
-    letter-spacing: 1.1;
+    letter-spacing: 1.1px;
     text-align: center;
     color: var(--color-primary-light);
   }
