--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -27,7 +27,7 @@
     url("../images/footer@2x.png") 2x
   );
   border-radius: 48px;
-  padding: 42px 80px;
+  padding: 42px 30px;
   max-width: 723px;
   width: 90%;
   z-index: 1001;
@@ -57,12 +57,15 @@
     font-weight: 700;
     line-height: 1.1;
     margin-bottom: 42px;
+    max-width: 260px;
+    margin-left: auto;
+    margin-right: auto;
 
     @media screen and (min-width: $bp-mobile) {
       font-size: 64px;
+      max-width: none;
     }
   }
-
   &__text {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
