Update project: slider fixes and layout improvements

--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -47,6 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    stroke: var(--color-primary-light);
   }
 
   &__title {
